# fastapi-base-code

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
app/: enums.py  logger.py  router.py  settings.py
app/shared_code/: common.py  tags_metadata.py
